--- a/conf/application.conf
+++ b/conf/application.conf
@@ -254,13 +254,15 @@ play.filters {
   # dependencies on CORS settings.
   cors {
     # Filter paths by a whitelist of path prefixes
-    #pathPrefixes = ["/some/path", ...]
+    pathPrefixes = ["/","/items"]
 
     # The allowed origins. If null, all origins are allowed.
     #allowedOrigins = ["https://www.example.com"]
 
     # The allowed HTTP methods. If null, all methods are allowed
-    #allowedHttpMethods = ["GET", "POST"]
+    allowedHttpMethods = ["GET", "POST", "DELETE", "PUT"]
+    allowedOrigins = null
+    allowedHttpHeaders = null
   }
 
   ## CSRF Filter
@@ -377,3 +379,4 @@ slick.dbs.default.profile="slick.jdbc.SQLiteProfile$"
 slick.dbs.default.db.profile="slick.driver.SQLiteDriver"
 slick.dbs.default.db.url="jdbc:sqlite:./store.db"
 slick.dbs.default.db.driver=org.sqlite.JDBC
+play.filters.enabled += "play.filters.cors.CORSFilter"
