--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,7 @@ play.modules {
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
+    enabled += "modules.SilhouetteModule"
 }
 
 ## IDE
@@ -380,3 +381,5 @@ slick.dbs.default.db.profile="slick.driver.SQLiteDriver"
 slick.dbs.default.db.url="jdbc:sqlite:./store.db"
 slick.dbs.default.db.driver=org.sqlite.JDBC
 play.filters.enabled += "play.filters.cors.CORSFilter"
+
+include "silhouette.conf"
