--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -25,16 +25,17 @@ silhouette {
       # Google provider
       google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
       google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
-      google.redirectURL="http://localhost:8080/authenticate/google"
-      google.clientID=""
-      google.clientSecret=""
+      google.redirectURL="http://localhost:9000/authenticate/google"
+      google.clientID="1052554223518-clct1ldsjiemu6n5oasnphrk91lfukvk.apps.googleusercontent.com"
+      google.clientSecret="i9sQBZ__HyaMESTnPi52VKtl"
       google.scope="profile email"
 
-      # Facebook provider
-      facebook.authorizationURL="https://graph.facebook.com/v2.3/oauth/authorize"
-      facebook.accessTokenURL="https://graph.facebook.com/v2.3/oauth/access_token"
-      facebook.redirectURL="http://localhost:8080/authenticate/facebook"
-      facebook.clientID=""
-      facebook.clientSecret=""
-      facebook.scope="email"
+      # Github provider
+      github.authorizationURL="https://github.com/login/oauth/authorize"
+      github.accessTokenURL="https://github.com/login/oauth/access_token"
+      github.redirectURL="http://localhost:9000/authenticate/github"
+      github.clientID="92dede86412a0ec8f547"
+      github.clientSecret="b699dc8978f99da80204ed36886b2760e5a6419a"
+      github.scope="profile email"
+
 }
