--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key = "FTTdMyE4=EEm@qQGZg[FEG:^^ob[2huqlafuwl>9`KgxDw4jv9GM[5:t27EUNZF6"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -312,6 +312,7 @@ play.filters {
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
     #allowed = [".example.com", "localhost:9000"]
+    allowed = ["."]
   }
 }
 
