Change allowedHttpHeaders in application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -245,6 +245,7 @@ play.filters {
 # There are a number of built-in filters that can be enabled and configured
 # to give Play greater security.
 #
+play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters {
   ## CORS filter configuration
   # https://www.playframework.com/documentation/latest/CorsFilter
@@ -262,8 +263,8 @@ play.filters {
 
     # The allowed HTTP methods. If null, all methods are allowed
     allowedHttpMethods = ["GET", "POST", "DELETE", "PUT"]
-    allowedOrigins = null
-    allowedHttpHeaders = null
+    allowedOrigins = ["http://localhost:3000","https://ebiznes-frontend-zm.azurewebsites.net"]
+    allowedHttpHeaders = ["Content-Type"]
   }
 
   ## CSRF Filter
@@ -381,6 +382,6 @@ slick.dbs.default.profile="slick.jdbc.SQLiteProfile$"
 slick.dbs.default.db.profile="slick.driver.SQLiteDriver"
 slick.dbs.default.db.url="jdbc:sqlite:./store.db"
 slick.dbs.default.db.driver=org.sqlite.JDBC
-play.filters.enabled += "play.filters.cors.CORSFilter"
+
 
 include "silhouette.conf"
