--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -25,7 +25,8 @@ silhouette {
       # Google provider
       google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
       google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
-      google.redirectURL="http://localhost:9000/authenticate/google"
+      #google.redirectURL="http://localhost:9000/authenticate/google"
+      google.redirectURL="https://ebiznes-backend-zm.azurewebsites.net/authenticate/google"
       google.clientID="1052554223518-clct1ldsjiemu6n5oasnphrk91lfukvk.apps.googleusercontent.com"
       google.clientSecret="i9sQBZ__HyaMESTnPi52VKtl"
       google.scope="profile email"
@@ -33,7 +34,8 @@ silhouette {
       # Github provider
       github.authorizationURL="https://github.com/login/oauth/authorize"
       github.accessTokenURL="https://github.com/login/oauth/access_token"
-      github.redirectURL="http://localhost:9000/authenticate/github"
+      #github.redirectURL="http://localhost:9000/authenticate/github"
+      github.redirectURL="https://ebiznes-backend-zm.azurewebsites.net/authenticate/github"
       github.clientID="92dede86412a0ec8f547"
       github.clientSecret="b699dc8978f99da80204ed36886b2760e5a6419a"
       github.scope="profile email"
